Web-App/Frontend/src/app/components/home/home.component.scss
/* Standardstile für Header und Container */
@import "../../color.scss";

h2 {
  margin-top: 30px;
  text-align: center;
}

.calendar-container {
  width: 100%; /* Vollständige Breite für mobile Geräte */
  margin: 0 auto;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  padding-top: 20px;
}

.calendar-container button {
  width: 20%; /* Größere Schaltflächen für mobile Geräte */
  height: auto; /* Automatische Höhe, um den Text besser passen zu lassen */
}

.summary {
  width: 100%; /* Vollständige Breite für mobile Geräte */
  margin: 0 auto;
}

.problem {
  width: 100%; /* Vollständige Breite für mobile Geräte */
  margin: 0 auto;
  padding: 10px;
  border: 2px solid red;
  border-radius: 5px;
  text-align: center;
  color: red;
  font-size: 16px;
  font-weight: bold;
  background-color: #fdd;
}

/* Stile für die Tagesdarstellung */
.day {
  width: 100%;
  margin: 0 auto;
  background-color: #f5f5f5;
  border: 1px solid #ddd;
  border-radius: 5px;
  margin-bottom: 10px;
}

.day-header {
  padding: 10px;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.day-content {
  border: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.5s ease;
}
.day-content.expanded {
  max-height: 1000px; /* Setzen Sie die maximale Höhe auf eine ausreichend große Zahl, um das Ausklappen zu ermöglichen */
}

.day-content > div {
  flex: 0 0 calc(50% - 20px); /* Zwei Gerichte pro Zeile für mobile Geräte */
  margin-right: 20px;
  margin-bottom: 20px;
}

.dish-details {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.5s ease; /* Übergang für die Höhe */
}

.dish-details.expanded {
  max-height: 1000px; /* Setzen Sie die maximale Höhe auf eine ausreichend große Zahl, um das Ausklappen zu ermöglichen */
}

/* Stile für das Toggle-Icon */
.toggle-icon {
  font-size: 1.2em;
  transition: transform 0.3s ease-in-out;
}

.toggle-dish-container {
  cursor: pointer; /* Zeiger-Cursor, um anzuzeigen, dass es klickbar ist */
}

.toggle-dish {
  font-size: 1.2em;
  transition: transform 0.3s ease-in-out;
  font-family: 'Material Icons'; /* Material Design Icons verwenden */
}
.toggle-dish.expanded {
  transform: rotate(90deg); /* Drehung des Icons, wenn expanded */
}
.day.expanded .toggle-icon {
  transform: rotate(90deg);
}

/* Tabellenstile */
table {
  min-width: 100%;
  width: auto;
  border-collapse: collapse;
  border: 2px solid #ddd;
}

th,
td {
  border: 1px solid #ddd;
  padding: 8px;
  text-align: left;
}

thead {
  background-color: $disabled-color;
  color: white;
}

tbody {
  background-color: white;
}

tbody tr:hover {
  background-color: rgb(255, 213, 213);
}

/* Responsivität */
@media (min-width: 769px) {
  /* Stile für größere Bildschirme */
  .calendar-container {
    width: 80%;
    justify-content: right;
    align-items: right;
  }

  .calendar-container button {
    width: 10%;
  }

  .summary,
  .problem {
    width: 80%;
  }

  .day-content > div {
    flex: 0 0 calc(33.33% - 20px);
  }
}

